--- a/src/app.html
+++ b/src/app.html
@@ -2,20 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<script>
 			if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
 				document.documentElement.classList.add('dark');
-				document.documentElement.style.cssText = 'color-scheme: dark';
 			} else {
 				document.documentElement.classList.remove('dark');
-				document.documentElement.style.cssText = 'color-scheme: light';
 			}
 		</script>
 		%sveltekit.head%
 	</head>
-	<body class="min-h-screen antialiased font-sans dark:bg-gray-900 dark:text-gray-100">
-		%sveltekit.body%
+	<body class="antialiased font-sans dark:bg-gray-900 dark:text-gray-100">
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
